[tool.poetry]
name = "biliaudio"
version = "0.1.0"
description = ""
authors = ["Harry Cheng <chengyuhui1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
ffmpeg-python = "^0.2.0"
mutagen = "^1.45.1"
sanitize-filename = "^1.2.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
